# wallet-squid

./: .gitignore  LICENSE  README.md  dune-project  wallet_squid.opam
lib/: base_path.ml  base_path.mli  box_printer.ml  box_printer.mli  dot_writer.ml  dot_writer.mli  dune  markdown_editor.ml  markdown_editor.mli  note.ml  note.mli  note_set.ml  note_set.mli  raw_note_content.ml  raw_note_content.mli  tag.ml  tag.mli  tag_commands.ml  tag_commands.mli  tag_dag.ml  tag_dag.mli  tag_info.ml  tag_info.mli  wallet_squid_command.ml
test/: dune  test_note.ml
test/example_notes_for_testing/: note1.md
test/example_notes_for_testing/subdir/: note2.md
test/invalid_tag_notes/: bad_note.md
