(lang dune 3.17)

(name wallet_squid)

(generate_opam_files true)

(source
 (github leedsjohn/wallet-squid))

(authors "John Leeds <leedsjohn6@gmail.com>")

(license MIT)

(package
 (name wallet_squid)
 (synopsis "Note tracking system")
 (depends ocaml base core))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
